comment the pause button

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
       </section>
       <section class="screen game active">
-        <button onClick="onPause()">Pause</button>
+        <!-- <button onClick="onPause()">Pause</button> -->
         <main></main>
       </section>
       <section class="screen"></section>
