add logic of game

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
           <!-- Game Canvas Container -->
           <div class="game-canvas-container">
             <!-- Canvas will be created by JS here -->
+            <canvas id="canvas" width="1180px" height="510px"></canvas>
+
           </div>
         </div>
       </div>
@@ -180,8 +182,8 @@
     <div class="left-gate"></div>
     <div class="right-gate"></div>
   </div>
-  <script src="./js/navigation.js"></script>
-  <script src="./js/core/Game.js"></script>
+  <script type="module" src="./js/navigation.js"></script>
+  <script type="module" src="./js/core/Game.js"></script>
 </body>
 
 </html>
