--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
     </div>
     <main>
-      <section class="screen home active">
+      <section class="screen home ">
         <h2>Mazer</h2>
         <menu class="buttons">
           <button onClick="newGame()" class="menu-btn" id="btn-new-game">
@@ -169,7 +169,27 @@
         </div>
       </section>
 
-      <section class="screen"></section>
+      <section class="screen win-screen ">
+        <div class="win-screen-container"></div>
+        <h2 class="screen-title">You Won</h2>
+        <div class="menu-btn btn-home" id="btn-win-home">
+          <h3>Home</h3>
+        </div>
+        <div class="menu-btn btn-new-game" id="btn-win-new-game">
+          <h3>New Game</h3>
+        </div>
+      </section>
+
+      <section class="screen lose-screen active">
+        <div class="lose-screen-container"></div>
+        <h2 class="screen-title">You Lost</h2>
+        <div class="menu-btn btn-home" id="btn-lose-home">
+          <h3>Home</h3>
+        </div>
+        <div class="menu-btn btn-new-game" id="btn-lose-new-game">
+          <h3>New Game</h3>
+        </div>
+      </section>
     </main>
 
     <script type="module" src="./js/navigation.js"></script>
