handle page load and pause manu

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <dialog id="pause-menu">
       <h2>pause</h2>
       <menu class="buttons">
-        <button onClick="resume()" class="menu-btn">Resume</button>
-        <button onClick="restart()" class="menu-btn">Restart</button>
-        <button onClick="quit()" class="menu-btn">Quit</button>
+        <button onClick="onResume()" class="menu-btn">Resume</button>
+        <button onClick="onRestart()" class="menu-btn">Restart</button>
+        <button onClick="onQuit()" class="menu-btn">Quit</button>
       </menu>
     </dialog>
     <dialog id="confirmation-modal">
